# erebus

./: README.md  Srules.txt  keep_alive.py  main.py  pyproject.toml  reaction_roles.json  reactrole.json  response.txt
cogs/: errorhandler.py  fun.py  general.py  info.py  mod.py  packs.py  poll.py  reactionroles.py  smp.py
